--- a/assign.css
+++ b/assign.css
@@ -49,6 +49,52 @@
     margin-top: 24px;
 }
 /* vision section */
+.vision-text{
+    font-size: 40px;
+    font-weight: bold;
+}
 .cardthree{
     display: flex;
+    gap: 24px;
+    border-radius: 16px;
+    /* padding:0px 32px; */
+    justify-content: space-around;
 }
+.v1{
+    background-color: #91b5f4;
+    border-radius: 16px;
+    padding: 32px 32px;
+}
+.v2{
+    background-color: #C6E4D6 ;
+    border-radius: 16px;
+    padding: 32px 32px;
+
+}
+.v3{
+    background-color:#F7EBCF ;
+    border-radius: 16px;
+    padding: 32px 32px;
+}
+.bs{
+    border-radius: 8px;
+    padding: 11px 20px;
+    margin: 0%;
+}
+.blue-button{
+    background-color: #5490F5;
+}
+.green-button{
+    background-color: #09A15C;
+}
+.yellow-button{
+    background-color: #FFC239;
+}
+.d-younus{
+    background-color: rgb(137, 127, 127);
+    border-radius: 16px;
+    padding: 48px 24px;
+    margin-top: 32px;
+}
+/* button section */
+
