--- a/assign.css
+++ b/assign.css
@@ -96,5 +96,33 @@
     padding: 48px 24px;
     margin-top: 32px;
 }
-/* button section */
+/* news */
+.news{
+    display: flex;
+    justify-content: space-between;
+    background-color: #f1eded;
+    border-radius: 24px;
+    margin-bottom: 50px;
+}
+.image4{
+    border-radius: 24px;
+    position: 48px;
+}
+.recent-text{
+    font-weight: 400px;
+    font-size: 40px;
+}
+.sat-news{
+    margin-left: 32px;
+    /* margin-top: 56px; */
+    margin-bottom: 56px;
+    margin-right: 48px;
+    padding-top: 0px;
+    text-align: top;
+    
+}
+.launch{
+    font-size: 32px;
+    font-weight: 400px;
+}
 
